# StarRailUID

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
StarRailUID/: __init__.py  version.py
StarRailUID/sruid_utils/api/: utils.py
StarRailUID/sruid_utils/api/hakush/: model.py  requests.py
StarRailUID/sruid_utils/api/lulu/: __init__.py  requests.py
StarRailUID/sruid_utils/api/mihomo/: __init__.py  models.py  requests.py
StarRailUID/sruid_utils/api/mys/: api.py  models.py
StarRailUID/starrailuid_abyss/: __init__.py  draw_abyss_card.py  utils.py
StarRailUID/starrailuid_abyss_boss/: __init__.py  draw_abyss_card.py  utils.py
StarRailUID/starrailuid_abyss_peak/: __init__.py  draw_abyss_card.py
StarRailUID/starrailuid_abyss_story/: __init__.py  draw_abyss_card.py  utils.py
StarRailUID/starrailuid_calc/: __init__.py
StarRailUID/starrailuid_charinfo/: __init__.py  cal_damage.py  cal_value.py  draw_char_img.py  get_char_img.py  panel_data.py  starrail_damage_cal - 快捷方式.lnk  to_card.py  to_data.py
StarRailUID/starrailuid_charinfo/Excel/: SkillData.json
StarRailUID/starrailuid_charinfo/config/: RelicAbility.json
StarRailUID/starrailuid_charinfo/damage/: Avatar.py  Role.py  utils.py
StarRailUID/starrailuid_charinfo/damage/AvatarDamage/: AvatarDamage.py
StarRailUID/starrailuid_charinfo/damage/Base/: AvatarBase.py  RelicBase.py  SkillBase.py  WeaponBase.py
StarRailUID/starrailuid_charinfo/damage/Excel/: SkillData.json  weapon_effect.json
StarRailUID/starrailuid_charinfo/damage/Relic/: Relic.py
StarRailUID/starrailuid_charinfo/damage/Weapon/: Weapon.py
StarRailUID/starrailuid_charinfo/effect/: Role.py  damageCal.py  utils.py
StarRailUID/starrailuid_charinfo/effect/Avatar/: Avatar.py
StarRailUID/starrailuid_charinfo/effect/Base/: AvatarBase.py  Character.py  RelicBase.py  SkillBase.py  WeaponBase.py  model.py
StarRailUID/starrailuid_charinfo/effect/Excel/: Rank.json  SkillData.json  seele.json  weapon_effect.json
StarRailUID/starrailuid_charinfo/effect/Relic/: Relic.py
StarRailUID/starrailuid_charinfo/effect/Weapon/: Weapon.py
StarRailUID/starrailuid_charinfo/mono/: Character.py
StarRailUID/starrailuid_config/: __init__.py  config_default.py  set_config.py  sr_config.py
StarRailUID/starrailuid_damagecal/: __init__.py  cal_damage.py
StarRailUID/starrailuid_damagecal/effect/: Role.py
StarRailUID/starrailuid_damagecal/effect/Abundance/: weapon_effect.json
StarRailUID/starrailuid_damagecal/effect/Avatar/: Avatar.py
StarRailUID/starrailuid_damagecal/effect/Base/: Avatar.py  AvatarBase.py  AvatarExtraAbility.json  Relic.py  RelicBase.py  Role.py  Skill.py  SkillBase.py  Weapon.py  WeaponBase.py  seele.json  utils.py
StarRailUID/starrailuid_damagecal/effect/Excel/: weapon_effect.json
StarRailUID/starrailuid_damagecal/effect/Hunt/: seele.json  weapon_effect.json
StarRailUID/starrailuid_damagecal/effect/Relic/: Relic.py
StarRailUID/starrailuid_damagecal/effect/Weapon/: Weapon.py
StarRailUID/starrailuid_damagecal/effect/relic/: relic.json
StarRailUID/starrailuid_exchange/: __init__.py
StarRailUID/starrailuid_gachalog/: __init__.py  draw_gachalogs.py  get_gachalogs.py
StarRailUID/starrailuid_grid_fight/: __init__.py  draw_grid_card.py
StarRailUID/starrailuid_help/: Help.json  __init__.py  get_help.py  help.json
StarRailUID/starrailuid_note/: __init__.py  draw_note_card.py  note_text.py  pie_chart.py
StarRailUID/starrailuid_resin/: __init__.py  draw_resin_card.py  notice.py  resin_text.py
StarRailUID/starrailuid_resource/: __init__.py
StarRailUID/starrailuid_rogue/: __init__.py  draw_rogue_card.py  draw_rogue_tourn_card.py  utils.py
StarRailUID/starrailuid_roleinfo/: __init__.py  draw_roleinfo_card.py  utils.py
StarRailUID/starrailuid_signin/: __init__.py  sign.py
StarRailUID/starrailuid_stamina/: __init__.py  database.py  draw_stamina_card.py  notice.py  stamina_text.py
StarRailUID/starrailuid_stamina/texture2D/: ring.apng
StarRailUID/starrailuid_start/: __init__.py  main.py
StarRailUID/starrailuid_user/: __init__.py  add_ck.py  draw_user_card.py  get_ck_help_msg.py  qrlogin.py
StarRailUID/starrailuid_wiki/: __init__.py
StarRailUID/tool/: upload_file.py
StarRailUID/utils/: abyss_common.py  api.py  convert.py  error_reply.py  image.py  mys_api.py  name_covert.py  sr_prefix.py
StarRailUID/utils/database/: model.py
StarRailUID/utils/excel/: AvatarPromotionConfig.json  EquipmentPromotionConfig.json  RelicMainAffixConfig.json  RelicSubAffixConfig.json  light_cone_ranks.json  model.py  read_excel.py
StarRailUID/utils/fonts/: first_world.py  starrail_fonts.py
StarRailUID/utils/image/: convert.py  image_tools.py
StarRailUID/utils/map/: AvatarRelicScore.json  GS_MAP_PATH.py  SR_MAP_PATH.py  gen.py  name_covert.py
StarRailUID/utils/map/data/: AvatarRelicScore.json  EquipmentID2AbilityProperty_mapping_1.0.5.json  EquipmentID2AbilityProperty_mapping_1.1.0.json  EquipmentID2AbilityProperty_mapping_1.2.0.json  EquipmentID2AbilityProperty_mapping_1.4.0.json  EquipmentID2AbilityProperty_mapping_1.5.0.json  EquipmentID2AbilityProperty_mapping_2.0.0.json  EquipmentID2AbilityProperty_mapping_2.1.0.json  EquipmentID2AbilityProperty_mapping_2.3.0.json  EquipmentID2AbilityProperty_mapping_2.4.0.json  EquipmentID2AbilityProperty_mapping_2.5.0.json  EquipmentID2EnName_mapping_1.0.5.json  EquipmentID2EnName_mapping_1.1.0.json  EquipmentID2EnName_mapping_1.2.0.json  EquipmentID2EnName_mapping_1.3.0.json  EquipmentID2EnName_mapping_1.4.0.json  EquipmentID2EnName_mapping_1.5.0.json  EquipmentID2EnName_mapping_2.0.0.json  EquipmentID2EnName_mapping_2.1.0.json  EquipmentID2EnName_mapping_2.3.0.json  EquipmentID2EnName_mapping_2.4.0.json  EquipmentID2EnName_mapping_2.5.0.json  EquipmentID2Name_mapping_1.0.5.json  EquipmentID2Name_mapping_1.1.0.json  EquipmentID2Name_mapping_1.2.0.json  EquipmentID2Name_mapping_1.3.0.json  (+175 more)
StarRailUID/utils/resource/: RESOURCE_PATH.py  download_all_resource.py  download_from_cos.py  download_url.py  get_pic_from.py  resource_map.json
(+1 files in other folders)
