[tool.ruff]
line-length = 108
target-version = "py38"

[tool.ruff.lint]
select = [
  "E",
  "W", # pycodestyle
  "F", # pyflakes
  # "I",        # isort
  "RUF", # ruff
  "TRY", # tryceratops
  "UP",

  # pylint
  "PLW", # Warning
  "PLR", # Refactor
  "PLE", # Error

  "PTH",   # flake8-use-pathlib
  "SLF",   # flake8-self
  "RET",   # flake8-return
  "RSE",   # flake8-raise
  "T20",   # flake8-print
  "PIE",   # flake8-pie
  "ISC",   # flake8-implicit-str-concat
  "C4",    # flake8-comprehensions
  "COM",   # flake8-commas
  "A",     # flake8-builtins
  "B",     # flake8-bugbear
  "ASYNC", # flake8-async
  "Q",     # flake8-quotes
]
ignore = [
  "ISC",
  "PLR2004",
  "A003",
  "E501",
  "COM812",
  "PLR0912",
  "PLR0915",
  "PLR0913",
  "PLR0911",
  "PLW0603", # Using the global statement
  "TRY002",
  "TRY003",
]
exclude = ["gen.py", ".ruff_cache"]

[tool.ruff.lint.isort]
case-sensitive = true
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]
combine-as-imports = true
order-by-type = true
relative-imports-order = "closest-to-furthest"

[[tool.pdm.source]]
name = "USTC"
url = "https://pypi.mirrors.ustc.edu.cn/simple"
verify_ssl = true

[project]
name = "StarRailUID"
version = "0.1.0"
description = "支持 NoneBot2 & HoshinoBot & ZeroBot & YunzaiBot 的全功能星穹铁道Bot插件"
authors = [
  { name = "qwerdvd", email = "105906879+qwerdvd@users.noreply.github.com" },
]
dependencies = [
  "msgspec>=0.18.6",
  "httpx>=0.27.2",
  "pillow>=10.4.0",
  "starrail-damage-cal>=3.1.0",
]
requires-python = ">=3.8.1,<4.0"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
gscore_auto_update_dep = ["starrail-damage-cal>=3.1.0"]


[tool.pdm.dev-dependencies]
dev = ["ruff>=0.6.5", "pre-commit>=3.8.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
